# LemmyCommentCleaner

./: README.md  pyproject.toml
lemmycleaner/: lemmycleaner.py
