[tool.poetry]
name = "lemmycleaner"
version = "0.1.0"
description = ""
authors = ["bhudson <brian.hudson@flexential.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pythorhead = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
